--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "eslint-plugin-import": "^2.20.1",
     "faker": "^5.3.1",
     "jest": "26.4.2",
+    "husky": "^6.0.0",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
     "ts-jest": "26.2.0",
