--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test:cov": "jest --coverage --passWithNoTests",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json --passWithNoTests",
+    "test:all": "npm run test && npm run test:e2e",
     "typeorm": "ts-node -r tsconfig-paths/register --project ./tsconfig.json ./node_modules/.bin/typeorm",
     "migration:generate": "npm run typeorm -- migration:generate --config src/infrastructure/configs/database.config",
     "migration:run": "npm run typeorm -- migration:run  --config src/infrastructure/configs/database.config",
