refactor(package.json): rename project and remove unused fields

--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
-  "name": "domain-driven-hexagon",
+  "name": "libms-backend",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
