--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,6 +14,11 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [10.x, 12.x, 14.x, 15.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -26,10 +31,10 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-node-
 
-    - name: Setup node
+    - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
-        node-version: '15.12'
-
+        node-version: ${{ matrix.node-version }}
     - run: npm ci
+    - run: npm run build --if-present
     - run: npm test
