--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,8 @@ DB_PORT=27017
 DB_USERNAME='user'
 DB_PASSWORD='password'
 DB_NAME='xLibMS'
+
+SMTP_HOST='smtp.example.com'
+SMTP_PORT=587
+SMTP_USERNAME='example@example.com'
+SMTP_PASSWORD='password'
