--- a/package.json
+++ b/package.json
@@ -26,16 +26,20 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.5.1",
     "@nestjs/common": "^7.6.15",
     "@nestjs/core": "^7.6.15",
     "@nestjs/microservices": "^7.6.15",
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/swagger": "^4.8.0",
     "@nestjs/typeorm": "^7.1.5",
+    "@types/nodemailer": "^6.4.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
+    "handlebars": "^4.7.7",
     "mongodb": "^3.6.5",
+    "nodemailer": "^6.5.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
@@ -81,7 +85,13 @@
     }
   },
   "lint-staged": {
-    "*.js": ["prettier --write", "eslint --cache --fix"],
-    "*.ts": ["prettier --write", "eslint --cache --fix"]
+    "*.js": [
+      "prettier --write",
+      "eslint --cache --fix"
+    ],
+    "*.ts": [
+      "prettier --write",
+      "eslint --cache --fix"
+    ]
   }
 }
