--- a/package.json
+++ b/package.json
@@ -29,17 +29,24 @@
     "@nestjs-modules/mailer": "^1.5.1",
     "@nestjs/common": "^7.6.15",
     "@nestjs/core": "^7.6.15",
+    "@nestjs/jwt": "^7.2.0",
     "@nestjs/microservices": "^7.6.15",
+    "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/swagger": "^4.8.0",
     "@nestjs/typeorm": "^7.1.5",
-    "@types/nodemailer": "^6.4.1",
+    "@types/express": "^4.17.11",
+    "@types/express-serve-static-core": "^4.17.19",
+    "@types/serve-static": "^1.13.9",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
     "handlebars": "^4.7.7",
     "mongodb": "^3.6.5",
     "nodemailer": "^6.5.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
@@ -52,12 +59,14 @@
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.0",
-    "@types/express": "^4.17.3",
+    "@nestjs/testing": "^7.6.15",
     "@types/faker": "^5.1.6",
     "@types/jest": "26.0.22",
     "@types/joi": "^14.3.4",
     "@types/node": "^14.14.37",
+    "@types/nodemailer": "^6.4.1",
+    "@types/passport-jwt": "^3.0.5",
+    "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.8",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "3.9.1",
