--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "@types/serve-static": "^1.13.9",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.12.2",
+    "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "handlebars": "^4.7.7",
+    "helmet": "^4.4.1",
     "mongodb": "^3.6.5",
     "nodemailer": "^6.5.0",
     "passport": "^0.4.1",
@@ -60,6 +62,7 @@
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.6.15",
+    "@types/csurf": "^1.11.1",
     "@types/faker": "^5.1.6",
     "@types/jest": "26.0.22",
     "@types/joi": "^14.3.4",
