--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/swagger": "^4.8.0",
     "@nestjs/typeorm": "^7.1.5",
+    "@types/bcrypt": "^3.0.1",
     "@types/express": "^4.17.11",
     "@types/express-serve-static-core": "^4.17.19",
     "@types/serve-static": "^1.13.9",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.12.2",
     "csurf": "^1.11.0",
