--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/bcrypt": "^3.0.1",
     "@types/csurf": "^1.11.1",
     "@types/faker": "^5.5.1",
+    "@types/inline-css": "^0.0.33",
     "@types/jest": "26.0.22",
     "@types/joi": "^17.2.3",
     "@types/node": "^14.14.37",
