--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/inline-css": "^0.0.33",
     "@types/jest": "26.0.22",
     "@types/joi": "^17.2.3",
+    "@types/multer": "^1.4.5",
     "@types/node": "^14.14.41",
     "@types/nodemailer": "^6.4.1",
     "@types/passport-jwt": "^3.0.5",
