fix: fix orm config to support local databases

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ DB_PORT=5432
 DB_USERNAME='user'
 DB_PASSWORD='password'
 DB_NAME='xLibMS'
+DB_SSL=false
 
 SMTP_HOST='smtp.example.com'
 SMTP_PORT=587
