--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "migration:run": "npm run typeorm -- migration:run  --config src/infrastructure/configs/database.config",
     "migration:revert": "npm run typeorm -- migration:revert  --config src/infrastructure/configs/database.config",
     "cm": "cz",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "seed:run": "ts-node -r tsconfig-paths/register --project ./tsconfig.json ./node_modules/typeorm-seeding/dist/cli.js seed --root src/infrastructure/configs"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.6.0",
