--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "migration:revert": "npm run typeorm -- migration:revert  --config src/infrastructure/configs/database.config",
     "cm": "cz",
     "prepare": "husky install",
-    "seed:run": "ts-node -r tsconfig-paths/register --project ./tsconfig.json ./node_modules/typeorm-seeding/dist/cli.js seed --root src/infrastructure/configs"
+    "seed:run": "ts-node -r tsconfig-paths/register --project ./tsconfig.json ./node_modules/typeorm-seeding/dist/cli.js --root src/infrastructure/configs -n database.config.ts seed",
+    "seed:config": "ts-node ./node_modules/typeorm-seeding/dist/cli.js config",
+    "schema:drop": "ts-node ./node_modules/typeorm/cli.js schema:drop"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.6.0",
@@ -86,7 +88,6 @@
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.20.1",
-    "faker": "^5.5.3",
     "husky": "^6.0.0",
     "jest": "26.6.3",
     "lint-staged": "^10.5.4",
