fix: fix seed commands and improve readability

--- a/package.json
+++ b/package.json
@@ -13,21 +13,21 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest --config .jestrc.json --passWithNoTests",
+    "prepare": "husky install",
     "test:watch": "jest --watch --passWithNoTests",
     "test:cov": "jest --coverage --passWithNoTests",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json --passWithNoTests",
     "test:all": "npm run test && npm run test:e2e",
-    "typeorm": "ts-node -r tsconfig-paths/register --project ./tsconfig.json ./node_modules/typeorm/cli.js",
-    "schema:sync": "npm run typeorm -- schema:sync --config src/infrastructure/configs/database.config",
-    "migration:generate": "npm run typeorm -- migration:generate --config src/infrastructure/configs/database.config",
-    "migration:run": "npm run typeorm -- migration:run  --config src/infrastructure/configs/database.config",
-    "migration:revert": "npm run typeorm -- migration:revert  --config src/infrastructure/configs/database.config",
-    "cm": "cz",
-    "prepare": "husky install",
-    "seed:run": "ts-node -r tsconfig-paths/register --project ./tsconfig.json ./node_modules/typeorm-seeding/dist/cli.js --root src/infrastructure/configs -n database.config.ts seed",
-    "seed:config": "ts-node ./node_modules/typeorm-seeding/dist/cli.js config",
-    "schema:drop": "ts-node ./node_modules/typeorm/cli.js schema:drop"
+    "typeorm": "ts-node -r tsconfig-paths/register --project ./tsconfig.json ./node_modules/typeorm/cli.js --config src/infrastructure/configs/database.config",
+    "schema:sync": "npm run typeorm -- schema:sync",
+    "schema:drop": "npm run typeorm -- schema:drop",
+    "migration:generate": "npm run typeorm -- migration:generate",
+    "migration:run": "npm run typeorm -- migration:run",
+    "migration:revert": "npm run typeorm -- migration:revert",
+    "typeorm-seeding": "ts-node -r tsconfig-paths/register --project ./tsconfig.json ./node_modules/typeorm-seeding/dist/cli.js --root src/infrastructure/configs -n database.config.ts",
+    "seed:run": "npm run typeorm-seeding -- seed",
+    "seed:config": "npm run typeorm-seeding -- config"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.6.0",
