--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "dotenv": "^9.0.0",
     "handlebars": "^4.7.7",
     "helmet": "^4.6.0",
+    "moment": "^2.29.1",
     "nodemailer": "^6.6.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
