--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "cookie-parser": "^1.4.5",
     "csurf": "^1.11.0",
     "dotenv": "^9.0.0",
     "handlebars": "^4.7.7",
     "helmet": "^4.6.0",
     "moment": "^2.29.1",
+    "ms": "^2.1.2",
     "nodemailer": "^6.6.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -70,11 +72,13 @@
     "@nestjs/schematics": "^7.3.1",
     "@nestjs/testing": "^7.6.15",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/csurf": "^1.11.1",
     "@types/faker": "^5.5.4",
     "@types/inline-css": "^3.0.0",
     "@types/jest": "26.0.23",
     "@types/joi": "^17.2.3",
+    "@types/ms": "^0.7.31",
     "@types/multer": "^1.4.5",
     "@types/node": "^15.0.2",
     "@types/nodemailer": "^6.4.1",
