--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,9 @@ SMTP_HOST='smtp.example.com'
 SMTP_PORT=587
 SMTP_USERNAME='example@example.com'
 SMTP_PASSWORD='password'
+
+CORS_ORIGIN='http://localhost:4000'
+CORS_CREDENTIALS=true
+CORS_ALLOWED_HEADERS='Accept,Content-Type,Authorization'
+CORS_METHODS='GET,HEAD,PUT,PATCH,POST,DELETE'
+CORS_PREFLIGHT_CONTINUE=false
