--- a/.env.example
+++ b/.env.example
@@ -8,10 +8,11 @@ DB_PASSWORD='password'
 DB_NAME='xLibMS'
 DB_SSL=false
 
-SMTP_HOST='smtp.example.com'
-SMTP_PORT=587
-SMTP_USERNAME='example@example.com'
-SMTP_PASSWORD='password'
+SMTP_TYPE = 
+SMTP_HOST=
+SMTP_PORT=465
+SMTP_USERNAME=
+SMTP_PASSWORD=
 
 CORS_ORIGIN='http://localhost:4000'
 CORS_CREDENTIALS=true
